--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,5 @@
 [Window][DockSpaceWindow]
-Pos=0,0
-Size=1920,1061
+Size=1920,1080
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,7 +9,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,49
-Size=345,631
+Size=345,643
 Collapsed=0
 DockId=0x00000005,0
 
@@ -28,7 +27,7 @@ Collapsed=0
 
 [Window][Scene Visualizer]
 Pos=347,49
-Size=1573,705
+Size=1573,724
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -294,8 +293,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=0,682
-Size=345,379
+Pos=0,694
+Size=345,386
 Collapsed=0
 DockId=0x00000006,0
 
@@ -312,8 +311,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1584,756
-Size=336,305
+Pos=1510,775
+Size=410,305
 Collapsed=0
 DockId=0x00000014,0
 
@@ -338,8 +337,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=347,756
-Size=1235,305
+Pos=0,775
+Size=1508,305
 Collapsed=0
 DockId=0x00000013,0
 
@@ -66012,7 +66011,7 @@ Column 0  Sort=0v
 
 [Docking][Data]
 DockSpace             ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace             ID=0xF15DEC6E Window=0x41896AB8 Pos=112,184 Size=1920,1012 Split=X Selected=0xBDDC88E0
+DockSpace             ID=0xF15DEC6E Pos=303,75 Size=1920,1031 Split=X Selected=0xBDDC88E0
   DockNode            ID=0x00000011 Parent=0xF15DEC6E SizeRef=343,829 Split=Y Selected=0x09C8B3D2
     DockNode          ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
     DockNode          ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
