--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -2,4 +2,4 @@ FROM mcr.microsoft.com/devcontainers/cpp:ubuntu-24.04
 
 RUN sudo apt-get update \
  && sudo apt-get install -y xorg-dev \
- && sudo apt-get install -y git-lfs
+ && sudo apt-get install -y valgrind
