--- a/imgui.ini
+++ b/imgui.ini
@@ -10,7 +10,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,49
-Size=489,518
+Size=447,518
 Collapsed=0
 DockId=0x00000005,0
 
@@ -27,8 +27,8 @@ Size=925,482
 Collapsed=0
 
 [Window][Scene Visualizer]
-Pos=491,49
-Size=1113,525
+Pos=449,49
+Size=1155,525
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -295,7 +295,7 @@ Collapsed=0
 
 [Window][Component Editor]
 Pos=0,569
-Size=489,312
+Size=447,312
 Collapsed=0
 DockId=0x00000006,0
 
@@ -324,8 +324,8 @@ Collapsed=0
 DockId=0x0000000C,0
 
 [Window][UI Visualizer]
-Pos=345,52
-Size=1168,702
+Pos=156,82
+Size=852,525
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -338,8 +338,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=491,576
-Size=849,305
+Pos=449,576
+Size=891,305
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65214,8 +65214,8 @@ Size=389,116
 Collapsed=0
 
 [Window][UI Hierarchy]
-Pos=0,52
-Size=343,1009
+Pos=-189,82
+Size=343,832
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -65225,8 +65225,8 @@ Size=297,128
 Collapsed=0
 
 [Window][UI Element Editor]
-Pos=1515,52
-Size=405,702
+Pos=1010,82
+Size=405,525
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -65300,7 +65300,7 @@ Size=180,92
 Collapsed=0
 
 [Window][Choose Directory##ChooseDir]
-Pos=30,104
+Pos=-159,137
 Size=768,348
 Collapsed=0
 
@@ -66018,25 +66018,29 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x771DDFFC,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace             ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace             ID=0xF15DEC6E Window=0x41896AB8 Pos=138,210 Size=1604,832 Split=X Selected=0xBDDC88E0
+DockSpace             ID=0xF15DEC6E Window=0x41896AB8 Pos=7,169 Size=1604,832 Split=X Selected=0xBDDC88E0
   DockNode            ID=0x00000011 Parent=0xF15DEC6E SizeRef=343,829 Split=Y Selected=0x09C8B3D2
     DockNode          ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
     DockNode          ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
   DockNode            ID=0x00000012 Parent=0xF15DEC6E SizeRef=1575,829 Split=X
     DockNode          ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=X
-      DockNode        ID=0x00000001 Parent=0x00000009 SizeRef=489,829 Split=Y Selected=0x2E9237F7
+      DockNode        ID=0x00000001 Parent=0x00000009 SizeRef=447,829 Split=Y Selected=0x2E9237F7
         DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=226,514 Selected=0x2E9237F7
         DockNode      ID=0x00000006 Parent=0x00000001 SizeRef=226,309 Selected=0xF4B38336
-      DockNode        ID=0x00000002 Parent=0x00000009 SizeRef=1429,829 Split=Y HiddenTabBar=1
+      DockNode        ID=0x00000002 Parent=0x00000009 SizeRef=1155,829 Split=Y HiddenTabBar=1
         DockNode      ID=0x00000007 Parent=0x00000002 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
           DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,518 Split=X Selected=0xF6FF0623
             DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=848,575 CentralNode=1 Selected=0xBDDC88E0
             DockNode  ID=0x0000000E Parent=0x0000000F SizeRef=405,575 Selected=0xFC56E895
           DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,305 Split=X Selected=0xBF096F38
-            DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=1091,248 Selected=0xBF096F38
-            DockNode  ID=0x00000014 Parent=0x00000010 SizeRef=336,248 Selected=0x2323D3E4
+            DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=891,248 Selected=0xBF096F38
+            DockNode  ID=0x00000014 Parent=0x00000010 SizeRef=262,248 Selected=0x2323D3E4
         DockNode      ID=0x00000008 Parent=0x00000002 SizeRef=820,227 Selected=0xC599F4BB
     DockNode          ID=0x0000000A Parent=0x00000012 SizeRef=282,825 Selected=0x26CE0345
 
