--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,5 @@
 [Window][DockSpaceWindow]
-Pos=0,0
-Size=1920,1080
+Size=1920,1057
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,7 +9,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,49
-Size=447,643
+Size=447,628
 Collapsed=0
 DockId=0x00000005,0
 
@@ -28,7 +27,7 @@ Collapsed=0
 
 [Window][Scene Visualizer]
 Pos=449,49
-Size=1471,724
+Size=1471,701
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -54,7 +53,7 @@ Size=429,128
 Collapsed=0
 
 [Window][Lights]
-Pos=349,216
+Pos=348,219
 Size=700,73
 Collapsed=0
 
@@ -294,8 +293,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=0,694
-Size=447,386
+Pos=0,679
+Size=447,378
 Collapsed=0
 DockId=0x00000006,0
 
@@ -312,8 +311,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1586,775
-Size=334,305
+Pos=1483,752
+Size=437,305
 Collapsed=0
 DockId=0x00000014,0
 
@@ -338,8 +337,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=449,775
-Size=1135,305
+Pos=449,752
+Size=1032,305
 Collapsed=0
 DockId=0x00000013,0
 
@@ -66024,7 +66023,7 @@ Column 0  Sort=0v
 
 [Docking][Data]
 DockSpace             ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace             ID=0xF15DEC6E Window=0x41896AB8 Pos=303,75 Size=1920,1031 Split=X Selected=0xBDDC88E0
+DockSpace             ID=0xF15DEC6E Pos=0,72 Size=1920,1008 Split=X Selected=0xBDDC88E0
   DockNode            ID=0x00000011 Parent=0xF15DEC6E SizeRef=343,829 Split=Y Selected=0x09C8B3D2
     DockNode          ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
     DockNode          ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
@@ -66039,8 +66038,8 @@ DockSpace             ID=0xF15DEC6E Window=0x41896AB8 Pos=303,75 Size=1920,1031 
             DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=848,575 CentralNode=1 Selected=0xBDDC88E0
             DockNode  ID=0x0000000E Parent=0x0000000F SizeRef=405,575 Selected=0xFC56E895
           DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,305 Split=X Selected=0xBF096F38
-            DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=891,248 Selected=0xBF096F38
-            DockNode  ID=0x00000014 Parent=0x00000010 SizeRef=262,248 Selected=0x2323D3E4
+            DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=1032,248 Selected=0xBF096F38
+            DockNode  ID=0x00000014 Parent=0x00000010 SizeRef=437,248 Selected=0x2323D3E4
         DockNode      ID=0x00000008 Parent=0x00000002 SizeRef=820,227 Selected=0xC599F4BB
     DockNode          ID=0x0000000A Parent=0x00000012 SizeRef=282,825 Selected=0x26CE0345
 
