--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,6 @@
 [Window][DockSpaceWindow]
-Size=1920,1057
+Pos=0,0
+Size=1604,881
 Collapsed=0
 
 [Window][Debug##Default]
@@ -311,8 +312,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1483,752
-Size=437,305
+Pos=1127,576
+Size=477,305
 Collapsed=0
 DockId=0x00000014,0
 
@@ -337,8 +338,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=449,752
-Size=1032,305
+Pos=0,576
+Size=1125,305
 Collapsed=0
 DockId=0x00000013,0
 
@@ -66023,7 +66024,7 @@ Column 0  Sort=0v
 
 [Docking][Data]
 DockSpace             ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace             ID=0xF15DEC6E Pos=0,72 Size=1920,1008 Split=X Selected=0xBDDC88E0
+DockSpace             ID=0xF15DEC6E Window=0x41896AB8 Pos=86,158 Size=1604,832 Split=X Selected=0xBDDC88E0
   DockNode            ID=0x00000011 Parent=0xF15DEC6E SizeRef=343,829 Split=Y Selected=0x09C8B3D2
     DockNode          ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
     DockNode          ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
