--- a/imgui.ini
+++ b/imgui.ini
@@ -1,16 +1,17 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1920,1057
+Size=1440,712
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=293,524
+ViewportPos=-530,611
+ViewportId=0x9F5F46A1
 Size=751,472
 Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,49
-Size=447,716
+Size=447,470
 Collapsed=0
 DockId=0x00000005,0
 
@@ -28,7 +29,7 @@ Collapsed=0
 
 [Window][Scene Visualizer]
 Pos=449,49
-Size=1471,701
+Size=991,356
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -294,8 +295,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=0,767
-Size=447,290
+Pos=0,521
+Size=447,191
 Collapsed=0
 DockId=0x00000006,0
 
@@ -312,8 +313,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1520,752
-Size=400,305
+Pos=1171,407
+Size=269,305
 Collapsed=0
 DockId=0x00000014,0
 
@@ -338,8 +339,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=449,752
-Size=1069,305
+Pos=449,407
+Size=720,305
 Collapsed=0
 DockId=0x00000013,0
 
@@ -66024,7 +66025,7 @@ Column 0  Sort=0v
 
 [Docking][Data]
 DockSpace             ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace             ID=0xF15DEC6E Window=0x41896AB8 Pos=0,72 Size=1920,1008 Split=X Selected=0xBDDC88E0
+DockSpace             ID=0xF15DEC6E Window=0x41896AB8 Pos=0,74 Size=1440,663 Split=X Selected=0xBDDC88E0
   DockNode            ID=0x00000011 Parent=0xF15DEC6E SizeRef=343,829 Split=Y Selected=0x09C8B3D2
     DockNode          ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
     DockNode          ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
