--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,5 @@
 [Window][DockSpaceWindow]
-Size=1604,881
+Size=1920,1057
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,7 +10,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,49
-Size=447,591
+Size=434,716
 Collapsed=0
 DockId=0x00000005,0
 
@@ -27,8 +27,8 @@ Size=925,482
 Collapsed=0
 
 [Window][Scene Visualizer]
-Pos=449,49
-Size=1155,525
+Pos=436,49
+Size=1484,715
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -294,8 +294,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=0,642
-Size=447,239
+Pos=0,767
+Size=434,290
 Collapsed=0
 DockId=0x00000006,0
 
@@ -312,8 +312,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1290,576
-Size=314,305
+Pos=1610,766
+Size=310,291
 Collapsed=0
 DockId=0x00000014,0
 
@@ -324,8 +324,8 @@ Collapsed=0
 DockId=0x0000000C,0
 
 [Window][UI Visualizer]
-Pos=156,82
-Size=852,525
+Pos=155,-141
+Size=1168,705
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -338,8 +338,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=449,576
-Size=839,305
+Pos=436,766
+Size=1172,291
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65214,8 +65214,8 @@ Size=389,116
 Collapsed=0
 
 [Window][UI Hierarchy]
-Pos=-189,82
-Size=343,832
+Pos=0,49
+Size=343,1012
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -65225,8 +65225,8 @@ Size=297,128
 Collapsed=0
 
 [Window][UI Element Editor]
-Pos=1010,82
-Size=405,525
+Pos=1325,-141
+Size=405,705
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -65341,6 +65341,12 @@ Size=254,150
 Pos=710,392
 Size=180,92
 Collapsed=0
+
+[Window][##Empty]
+Pos=-190,-141
+Size=1920,705
+Collapsed=0
+DockId=0x0000000D,0
 
 [Table][0xF9AA59E3,4]
 RefScale=18
@@ -66024,23 +66030,23 @@ Column 0  Sort=0v
 
 [Docking][Data]
 DockSpace             ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace             ID=0xF15DEC6E Pos=216,288 Size=1604,832 Split=X Selected=0xBDDC88E0
+DockSpace             ID=0xF15DEC6E Pos=0,72 Size=1920,1008 Split=X Selected=0xBDDC88E0
   DockNode            ID=0x00000011 Parent=0xF15DEC6E SizeRef=343,829 Split=Y Selected=0x09C8B3D2
     DockNode          ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
     DockNode          ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
   DockNode            ID=0x00000012 Parent=0xF15DEC6E SizeRef=1575,829 Split=X
     DockNode          ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=X
-      DockNode        ID=0x00000001 Parent=0x00000009 SizeRef=447,829 Split=Y Selected=0x2E9237F7
+      DockNode        ID=0x00000001 Parent=0x00000009 SizeRef=434,829 Split=Y Selected=0x2E9237F7
         DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=226,716 Selected=0x2E9237F7
         DockNode      ID=0x00000006 Parent=0x00000001 SizeRef=226,290 Selected=0xF4B38336
-      DockNode        ID=0x00000002 Parent=0x00000009 SizeRef=1155,829 Split=Y HiddenTabBar=1
+      DockNode        ID=0x00000002 Parent=0x00000009 SizeRef=1484,829 Split=Y HiddenTabBar=1
         DockNode      ID=0x00000007 Parent=0x00000002 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
-          DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,518 Split=X Selected=0xF6FF0623
+          DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,715 Split=X Selected=0xF6FF0623
             DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=848,575 CentralNode=1 Selected=0xBDDC88E0
             DockNode  ID=0x0000000E Parent=0x0000000F SizeRef=405,575 Selected=0xFC56E895
-          DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,305 Split=X Selected=0xBF096F38
-            DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=836,248 Selected=0xBF096F38
-            DockNode  ID=0x00000014 Parent=0x00000010 SizeRef=313,248 Selected=0x2323D3E4
+          DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,291 Split=X Selected=0xBF096F38
+            DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=1172,248 Selected=0xBF096F38
+            DockNode  ID=0x00000014 Parent=0x00000010 SizeRef=310,248 Selected=0x2323D3E4
         DockNode      ID=0x00000008 Parent=0x00000002 SizeRef=820,227 Selected=0xC599F4BB
     DockNode          ID=0x0000000A Parent=0x00000012 SizeRef=282,825 Selected=0x26CE0345
 
