--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,5 @@
 [Window][DockSpaceWindow]
-Pos=0,0
-Size=1600,877
+Size=1920,1057
 Collapsed=0
 
 [Window][Debug##Default]
@@ -11,7 +10,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,49
-Size=434,588
+Size=434,716
 Collapsed=0
 DockId=0x00000005,0
 
@@ -29,7 +28,7 @@ Collapsed=0
 
 [Window][Scene Visualizer]
 Pos=436,49
-Size=1164,535
+Size=1484,715
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -295,8 +294,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=0,639
-Size=434,238
+Pos=0,767
+Size=434,290
 Collapsed=0
 DockId=0x00000006,0
 
@@ -313,8 +312,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1357,586
-Size=243,291
+Pos=1610,766
+Size=310,291
 Collapsed=0
 DockId=0x00000014,0
 
@@ -339,8 +338,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=436,586
-Size=919,291
+Pos=436,766
+Size=1172,291
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65349,6 +65348,12 @@ Size=1920,705
 Collapsed=0
 DockId=0x0000000D,0
 
+[Window][##Welcome]
+Pos=0,52
+Size=1920,1009
+Collapsed=0
+DockId=0x0000000D,0
+
 [Table][0xF9AA59E3,4]
 RefScale=18
 Column 0  Sort=0v
@@ -66029,9 +66034,13 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x5375B12D,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace             ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace             ID=0xF15DEC6E Window=0x41896AB8 Pos=0,72 Size=1600,828 Split=X Selected=0xBDDC88E0
+DockSpace             ID=0xF15DEC6E Pos=0,72 Size=1920,1008 Split=X Selected=0xBDDC88E0
   DockNode            ID=0x00000011 Parent=0xF15DEC6E SizeRef=343,829 Split=Y Selected=0x09C8B3D2
     DockNode          ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
     DockNode          ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
@@ -66043,7 +66052,7 @@ DockSpace             ID=0xF15DEC6E Window=0x41896AB8 Pos=0,72 Size=1600,828 Spl
       DockNode        ID=0x00000002 Parent=0x00000009 SizeRef=1484,829 Split=Y HiddenTabBar=1
         DockNode      ID=0x00000007 Parent=0x00000002 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
           DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,715 Split=X Selected=0xF6FF0623
-            DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=848,575 CentralNode=1 Selected=0xBDDC88E0
+            DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=848,575 CentralNode=1 HiddenTabBar=1 Selected=0xDCD3BA3B
             DockNode  ID=0x0000000E Parent=0x0000000F SizeRef=405,575 Selected=0xFC56E895
           DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,291 Split=X Selected=0xBF096F38
             DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=1172,248 Selected=0xBF096F38
