--- a/imgui.ini
+++ b/imgui.ini
@@ -11,7 +11,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,49
-Size=316,588
+Size=366,588
 Collapsed=0
 DockId=0x00000005,0
 
@@ -28,8 +28,8 @@ Size=925,482
 Collapsed=0
 
 [Window][Scene Visualizer]
-Pos=318,49
-Size=1282,647
+Pos=368,49
+Size=1232,587
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -296,7 +296,7 @@ Collapsed=0
 
 [Window][Component Editor]
 Pos=0,639
-Size=316,238
+Size=366,238
 Collapsed=0
 DockId=0x00000006,0
 
@@ -313,8 +313,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1357,698
-Size=243,179
+Pos=1368,638
+Size=232,239
 Collapsed=0
 DockId=0x00000014,0
 
@@ -339,8 +339,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=318,698
-Size=1037,179
+Pos=368,638
+Size=998,239
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65301,7 +65301,7 @@ Size=180,92
 Collapsed=0
 
 [Window][Choose Directory##ChooseDir]
-Pos=-159,137
+Pos=256,175
 Size=768,348
 Collapsed=0
 
@@ -66039,6 +66039,10 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x6A6CF2E5,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace             ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
 DockSpace             ID=0xF15DEC6E Window=0x41896AB8 Pos=0,72 Size=1600,828 Split=X Selected=0xBDDC88E0
@@ -66047,17 +66051,17 @@ DockSpace             ID=0xF15DEC6E Window=0x41896AB8 Pos=0,72 Size=1600,828 Spl
     DockNode          ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
   DockNode            ID=0x00000012 Parent=0xF15DEC6E SizeRef=1575,829 Split=X
     DockNode          ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=X
-      DockNode        ID=0x00000001 Parent=0x00000009 SizeRef=316,829 Split=Y Selected=0x2E9237F7
+      DockNode        ID=0x00000001 Parent=0x00000009 SizeRef=366,829 Split=Y Selected=0x2E9237F7
         DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=226,716 Selected=0x2E9237F7
         DockNode      ID=0x00000006 Parent=0x00000001 SizeRef=226,290 Selected=0xF4B38336
-      DockNode        ID=0x00000002 Parent=0x00000009 SizeRef=1282,829 Split=Y HiddenTabBar=1
+      DockNode        ID=0x00000002 Parent=0x00000009 SizeRef=1232,829 Split=Y HiddenTabBar=1
         DockNode      ID=0x00000007 Parent=0x00000002 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
-          DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,647 Split=X Selected=0xF6FF0623
+          DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,587 Split=X Selected=0xF6FF0623
             DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=848,575 CentralNode=1 HiddenTabBar=1 Selected=0xBDDC88E0
             DockNode  ID=0x0000000E Parent=0x0000000F SizeRef=405,575 Selected=0xFC56E895
-          DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,179 Split=X Selected=0xBF096F38
-            DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=1037,248 Selected=0xBF096F38
-            DockNode  ID=0x00000014 Parent=0x00000010 SizeRef=243,248 Selected=0x2323D3E4
+          DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,239 Split=X Selected=0xBF096F38
+            DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=998,248 Selected=0xBF096F38
+            DockNode  ID=0x00000014 Parent=0x00000010 SizeRef=232,248 Selected=0x2323D3E4
         DockNode      ID=0x00000008 Parent=0x00000002 SizeRef=820,227 Selected=0xC599F4BB
     DockNode          ID=0x0000000A Parent=0x00000012 SizeRef=282,825 Selected=0x26CE0345
 
