--- a/imgui.ini
+++ b/imgui.ini
@@ -326,7 +326,7 @@ DockId=0x0000000C,0
 
 [Window][UI Visualizer]
 Pos=345,49
-Size=852,687
+Size=848,587
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -345,7 +345,7 @@ Collapsed=0
 DockId=0x00000013,0
 
 [Window][Create Entity with MeshComponent]
-Pos=314,247
+Pos=254,187
 Size=430,158
 Collapsed=0
 
@@ -65216,7 +65216,7 @@ Collapsed=0
 
 [Window][UI Hierarchy]
 Pos=0,49
-Size=343,832
+Size=343,828
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -65226,8 +65226,8 @@ Size=297,128
 Collapsed=0
 
 [Window][UI Element Editor]
-Pos=1199,49
-Size=405,687
+Pos=1195,49
+Size=405,587
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -65311,12 +65311,12 @@ Size=474,165
 Collapsed=0
 
 [Window][Create Entity with ScriptComponent]
-Pos=642,281
+Pos=582,221
 Size=370,159
 Collapsed=0
 
 [Window][Select Script Class]
-Pos=0,3
+Pos=-60,-57
 Size=32,40
 Collapsed=0
 
@@ -65354,6 +65354,21 @@ Pos=0,52
 Size=1920,1009
 Collapsed=0
 DockId=0x0000000D,0
+
+[Window][Delete?]
+Pos=644,386
+Size=311,105
+Collapsed=0
+
+[Window][Stacked 2]
+Pos=725,394
+Size=226,94
+Collapsed=0
+
+[Window][Stacked 1]
+Pos=595,352
+Size=409,172
+Collapsed=0
 
 [Table][0xF9AA59E3,4]
 RefScale=18
