feat_begin: UI layers

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1600,877
+Size=1920,1057
 Collapsed=0
 
 [Window][Debug##Default]
@@ -11,7 +11,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,49
-Size=366,588
+Size=376,716
 Collapsed=0
 DockId=0x00000005,0
 
@@ -22,14 +22,13 @@ Size=800,576
 Collapsed=0
 
 [Window][Choose File##ChooseFile]
-ViewportPos=240,62
-ViewportId=0xCBB8C2C5
+Pos=393,101
 Size=925,482
 Collapsed=0
 
 [Window][Scene Visualizer]
-Pos=368,49
-Size=1232,587
+Pos=378,49
+Size=1542,767
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -295,8 +294,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=0,639
-Size=366,238
+Pos=0,767
+Size=376,290
 Collapsed=0
 DockId=0x00000006,0
 
@@ -313,8 +312,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1368,638
-Size=232,239
+Pos=1680,818
+Size=240,239
 Collapsed=0
 DockId=0x00000014,0
 
@@ -326,7 +325,7 @@ DockId=0x0000000C,0
 
 [Window][UI Visualizer]
 Pos=345,49
-Size=848,587
+Size=1168,771
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -339,8 +338,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=368,638
-Size=998,239
+Pos=378,818
+Size=1300,239
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65216,7 +65215,7 @@ Collapsed=0
 
 [Window][UI Hierarchy]
 Pos=0,49
-Size=343,828
+Size=343,1012
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -65226,8 +65225,8 @@ Size=297,128
 Collapsed=0
 
 [Window][UI Element Editor]
-Pos=1195,49
-Size=405,587
+Pos=1515,49
+Size=405,771
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -65312,12 +65311,12 @@ Collapsed=0
 
 [Window][Create Entity with ScriptComponent]
 Pos=582,221
-Size=370,159
+Size=473,247
 Collapsed=0
 
 [Window][Select Script Class]
-Pos=-60,-57
-Size=32,40
+Pos=706,276
+Size=279,261
 Collapsed=0
 
 [Window][Add New Text to Window2]
@@ -65344,8 +65343,8 @@ Size=180,92
 Collapsed=0
 
 [Window][##Empty]
-Pos=-190,-141
-Size=1920,705
+Pos=0,49
+Size=1920,771
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -65368,6 +65367,11 @@ Collapsed=0
 [Window][Stacked 1]
 Pos=595,352
 Size=409,172
+Collapsed=0
+
+[Window][Select Asset]
+Pos=875,486
+Size=606,268
 Collapsed=0
 
 [Table][0xF9AA59E3,4]
@@ -66058,25 +66062,45 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x0C869C67,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x8290029F,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xA5DF721B,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xA0A813DA,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x94AD126D,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace             ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace             ID=0xF15DEC6E Window=0x41896AB8 Pos=0,72 Size=1600,828 Split=X Selected=0xBDDC88E0
+DockSpace             ID=0xF15DEC6E Window=0x41896AB8 Pos=0,72 Size=1920,1008 Split=X Selected=0xBDDC88E0
   DockNode            ID=0x00000011 Parent=0xF15DEC6E SizeRef=343,829 Split=Y Selected=0x09C8B3D2
     DockNode          ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
     DockNode          ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
   DockNode            ID=0x00000012 Parent=0xF15DEC6E SizeRef=1575,829 Split=X
     DockNode          ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=X
-      DockNode        ID=0x00000001 Parent=0x00000009 SizeRef=366,829 Split=Y Selected=0x2E9237F7
+      DockNode        ID=0x00000001 Parent=0x00000009 SizeRef=376,829 Split=Y Selected=0x2E9237F7
         DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=226,716 Selected=0x2E9237F7
         DockNode      ID=0x00000006 Parent=0x00000001 SizeRef=226,290 Selected=0xF4B38336
-      DockNode        ID=0x00000002 Parent=0x00000009 SizeRef=1232,829 Split=Y HiddenTabBar=1
+      DockNode        ID=0x00000002 Parent=0x00000009 SizeRef=1542,829 Split=Y HiddenTabBar=1
         DockNode      ID=0x00000007 Parent=0x00000002 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
           DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,587 Split=X Selected=0xF6FF0623
-            DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=848,575 CentralNode=1 HiddenTabBar=1 Selected=0xBDDC88E0
+            DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=848,575 CentralNode=1 HiddenTabBar=1 Selected=0x2FE3D6CD
             DockNode  ID=0x0000000E Parent=0x0000000F SizeRef=405,575 Selected=0xFC56E895
           DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,239 Split=X Selected=0xBF096F38
-            DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=998,248 Selected=0xBF096F38
-            DockNode  ID=0x00000014 Parent=0x00000010 SizeRef=232,248 Selected=0x2323D3E4
+            DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=1300,248 Selected=0xBF096F38
+            DockNode  ID=0x00000014 Parent=0x00000010 SizeRef=240,248 Selected=0x2323D3E4
         DockNode      ID=0x00000008 Parent=0x00000002 SizeRef=820,227 Selected=0xC599F4BB
     DockNode          ID=0x0000000A Parent=0x00000012 SizeRef=282,825 Selected=0x26CE0345
 
