--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1604,881
+Size=1920,1061
 Collapsed=0
 
 [Window][Debug##Default]
@@ -11,7 +11,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,49
-Size=376,591
+Size=376,719
 Collapsed=0
 DockId=0x00000005,0
 
@@ -28,7 +28,7 @@ Collapsed=0
 
 [Window][Scene Visualizer]
 Pos=378,49
-Size=1226,591
+Size=1542,771
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -294,8 +294,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=0,642
-Size=376,239
+Pos=0,770
+Size=376,291
 Collapsed=0
 DockId=0x00000006,0
 
@@ -312,8 +312,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1408,642
-Size=196,239
+Pos=1675,822
+Size=245,239
 Collapsed=0
 DockId=0x00000014,0
 
@@ -325,7 +325,7 @@ DockId=0x0000000C,0
 
 [Window][UI Visualizer]
 Pos=345,49
-Size=949,591
+Size=1265,771
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -338,8 +338,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=345,642
-Size=1061,239
+Pos=345,822
+Size=1328,239
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65215,7 +65215,7 @@ Collapsed=0
 
 [Window][UI Hierarchy]
 Pos=0,49
-Size=343,832
+Size=343,1012
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -65225,8 +65225,8 @@ Size=297,128
 Collapsed=0
 
 [Window][UI Element Editor]
-Pos=1296,49
-Size=308,591
+Pos=1612,49
+Size=308,771
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -65315,8 +65315,8 @@ Size=473,247
 Collapsed=0
 
 [Window][Select Script Class]
-Pos=706,276
-Size=279,261
+Pos=649,215
+Size=279,255
 Collapsed=0
 
 [Window][Add New Text to Window2]
@@ -65372,6 +65372,11 @@ Collapsed=0
 [Window][Select Asset]
 Pos=875,486
 Size=606,268
+Collapsed=0
+
+[Window][Select Script]
+Pos=494,254
+Size=607,404
 Collapsed=0
 
 [Table][0xF9AA59E3,4]
@@ -66084,7 +66089,7 @@ Column 0  Sort=0v
 
 [Docking][Data]
 DockSpace             ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace             ID=0xF15DEC6E Window=0x41896AB8 Pos=-88,85 Size=1604,832 Split=X Selected=0xBDDC88E0
+DockSpace             ID=0xF15DEC6E Window=0x41896AB8 Pos=-178,112 Size=1920,1012 Split=X Selected=0xBDDC88E0
   DockNode            ID=0x00000011 Parent=0xF15DEC6E SizeRef=343,829 Split=Y Selected=0x09C8B3D2
     DockNode          ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
     DockNode          ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
