--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1600,877
+Size=1920,1061
 Collapsed=0
 
 [Window][Debug##Default]
@@ -11,9 +11,9 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,49
-Size=287,588
+Size=341,1012
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000001,0
 
 [Window][Panels]
 ViewportPos=222,295
@@ -27,8 +27,8 @@ Size=925,482
 Collapsed=0
 
 [Window][Scene Visualizer]
-Pos=289,49
-Size=1311,580
+Pos=343,49
+Size=1132,731
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -294,10 +294,10 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=0,639
-Size=287,238
+Pos=1477,49
+Size=443,1012
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000004,0
 
 [Window][Assets]
 Pos=1318,52
@@ -312,8 +312,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1411,631
-Size=189,246
+Pos=1355,782
+Size=120,279
 Collapsed=0
 DockId=0x00000014,0
 
@@ -338,8 +338,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=289,631
-Size=1120,246
+Pos=343,782
+Size=1010,279
 Collapsed=0
 DockId=0x00000013,0
 
@@ -66088,24 +66088,24 @@ RefScale=18
 Column 0  Sort=0v
 
 [Docking][Data]
-DockSpace             ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace             ID=0xF15DEC6E Window=0x41896AB8 Pos=0,72 Size=1600,828 Split=X Selected=0xBDDC88E0
-  DockNode            ID=0x00000011 Parent=0xF15DEC6E SizeRef=343,829 Split=Y Selected=0x09C8B3D2
-    DockNode          ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
-    DockNode          ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
-  DockNode            ID=0x00000012 Parent=0xF15DEC6E SizeRef=1575,829 Split=X
-    DockNode          ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=X
-      DockNode        ID=0x00000001 Parent=0x00000009 SizeRef=287,829 Split=Y Selected=0x2E9237F7
-        DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=226,716 Selected=0x2E9237F7
-        DockNode      ID=0x00000006 Parent=0x00000001 SizeRef=226,290 Selected=0xF4B38336
-      DockNode        ID=0x00000002 Parent=0x00000009 SizeRef=1311,829 Split=Y HiddenTabBar=1
-        DockNode      ID=0x00000007 Parent=0x00000002 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
-          DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,584 Split=X Selected=0xF6FF0623
-            DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=945,575 CentralNode=1 HiddenTabBar=1 Selected=0x2FE3D6CD
-            DockNode  ID=0x0000000E Parent=0x0000000F SizeRef=308,575 Selected=0xFC56E895
-          DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,246 Split=X Selected=0xBF096F38
-            DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=1120,248 Selected=0xBF096F38
-            DockNode  ID=0x00000014 Parent=0x00000010 SizeRef=189,248 Selected=0x2323D3E4
-        DockNode      ID=0x00000008 Parent=0x00000002 SizeRef=820,227 Selected=0xC599F4BB
-    DockNode          ID=0x0000000A Parent=0x00000012 SizeRef=282,825 Selected=0x26CE0345
+DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
+DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=34,106 Size=1920,1012 Split=X Selected=0xBDDC88E0
+  DockNode              ID=0x00000003 Parent=0xF15DEC6E SizeRef=1475,1008 Split=X
+    DockNode            ID=0x00000011 Parent=0x00000003 SizeRef=343,829 Split=Y Selected=0x09C8B3D2
+      DockNode          ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
+      DockNode          ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
+    DockNode            ID=0x00000012 Parent=0x00000003 SizeRef=1575,829 Split=X
+      DockNode          ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=X
+        DockNode        ID=0x00000001 Parent=0x00000009 SizeRef=341,829 Selected=0x2E9237F7
+        DockNode        ID=0x00000002 Parent=0x00000009 SizeRef=1132,829 Split=Y HiddenTabBar=1
+          DockNode      ID=0x00000007 Parent=0x00000002 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
+            DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,727 Split=X Selected=0xF6FF0623
+              DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=945,575 CentralNode=1 HiddenTabBar=1 Selected=0xBDDC88E0
+              DockNode  ID=0x0000000E Parent=0x0000000F SizeRef=308,575 Selected=0xFC56E895
+            DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,279 Split=X Selected=0xBF096F38
+              DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=1010,248 Selected=0xBF096F38
+              DockNode  ID=0x00000014 Parent=0x00000010 SizeRef=120,248 Selected=0x2323D3E4
+          DockNode      ID=0x00000008 Parent=0x00000002 SizeRef=820,227 Selected=0xC599F4BB
+      DockNode          ID=0x0000000A Parent=0x00000012 SizeRef=282,825 Selected=0x26CE0345
+  DockNode              ID=0x00000004 Parent=0xF15DEC6E SizeRef=443,1008 Selected=0xF4B38336
 
