feat_end: Metadata

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1600,877
+Size=1920,1057
 Collapsed=0
 
 [Window][Debug##Default]
@@ -11,7 +11,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,49
-Size=324,828
+Size=324,1008
 Collapsed=0
 DockId=0x00000001,0
 
@@ -28,7 +28,7 @@ Collapsed=0
 
 [Window][Scene Visualizer]
 Pos=326,49
-Size=897,663
+Size=1217,843
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -294,8 +294,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=1225,49
-Size=375,828
+Pos=1545,49
+Size=375,1008
 Collapsed=0
 DockId=0x00000004,0
 
@@ -312,8 +312,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1052,714
-Size=171,163
+Pos=1311,894
+Size=232,163
 Collapsed=0
 DockId=0x00000014,0
 
@@ -338,8 +338,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=326,714
-Size=724,163
+Pos=326,894
+Size=983,163
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65379,6 +65379,11 @@ Pos=494,254
 Size=607,404
 Collapsed=0
 
+[Window][Tilemap Editor]
+Pos=927,498
+Size=443,282
+Collapsed=0
+
 [Table][0xF9AA59E3,4]
 RefScale=18
 Column 0  Sort=0v
@@ -66089,7 +66094,7 @@ Column 0  Sort=0v
 
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,72 Size=1600,828 Split=X Selected=0xBDDC88E0
+DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,72 Size=1920,1008 Split=X Selected=0xBDDC88E0
   DockNode              ID=0x00000003 Parent=0xF15DEC6E SizeRef=1223,1008 Split=X
     DockNode            ID=0x00000011 Parent=0x00000003 SizeRef=343,829 Split=Y Selected=0x09C8B3D2
       DockNode          ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
