bug: Script instance disappears on ScriptComponent in Runtime

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1604,881
+Size=1920,1061
 Collapsed=0
 
 [Window][Debug##Default]
@@ -11,7 +11,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,49
-Size=324,832
+Size=324,1012
 Collapsed=0
 DockId=0x00000001,0
 
@@ -28,7 +28,7 @@ Collapsed=0
 
 [Window][Scene Visualizer]
 Pos=326,49
-Size=987,667
+Size=1167,847
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -294,8 +294,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=1315,49
-Size=289,832
+Pos=1495,49
+Size=425,1012
 Collapsed=0
 DockId=0x00000004,0
 
@@ -312,8 +312,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1043,718
-Size=270,163
+Pos=1272,898
+Size=221,163
 Collapsed=0
 DockId=0x00000014,0
 
@@ -338,8 +338,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=326,718
-Size=715,163
+Pos=326,898
+Size=944,163
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65315,7 +65315,7 @@ Size=473,247
 Collapsed=0
 
 [Window][Select Script Class]
-Pos=470,111
+Pos=384,25
 Size=272,191
 Collapsed=0
 
@@ -65380,8 +65380,8 @@ Size=607,404
 Collapsed=0
 
 [Window][Tilemap Editor]
-Pos=485,182
-Size=307,375
+Pos=486,183
+Size=287,360
 Collapsed=0
 
 [Table][0xF9AA59E3,4]
@@ -66096,25 +66096,81 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x86B7968B,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x5BDC8510,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x85894D9B,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xB805F91E,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x21D6C7F5,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x554559C8,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x92D733EA,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x5EA3914C,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x4A14E229,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xA9A908FE,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xFDE94CD4,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xCE92535A,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x4379A5F4,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x90FD425B,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=34,106 Size=1604,832 Split=X Selected=0xBDDC88E0
-  DockNode              ID=0x00000003 Parent=0xF15DEC6E SizeRef=1309,1008 Split=X
+DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=242,314 Size=1920,1012 Split=X Selected=0xBDDC88E0
+  DockNode              ID=0x00000003 Parent=0xF15DEC6E SizeRef=1493,1008 Split=X
     DockNode            ID=0x00000011 Parent=0x00000003 SizeRef=343,829 Split=Y Selected=0x09C8B3D2
       DockNode          ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
       DockNode          ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
     DockNode            ID=0x00000012 Parent=0x00000003 SizeRef=1575,829 Split=X
       DockNode          ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=X
         DockNode        ID=0x00000001 Parent=0x00000009 SizeRef=324,829 Selected=0x2E9237F7
-        DockNode        ID=0x00000002 Parent=0x00000009 SizeRef=983,829 Split=Y HiddenTabBar=1
+        DockNode        ID=0x00000002 Parent=0x00000009 SizeRef=1167,829 Split=Y HiddenTabBar=1
           DockNode      ID=0x00000007 Parent=0x00000002 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
             DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,843 Split=X Selected=0xF6FF0623
               DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=945,575 CentralNode=1 HiddenTabBar=1 Selected=0xBDDC88E0
               DockNode  ID=0x0000000E Parent=0x0000000F SizeRef=308,575 Selected=0xFC56E895
             DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,163 Split=X Selected=0xBF096F38
-              DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=712,248 Selected=0xBF096F38
-              DockNode  ID=0x00000014 Parent=0x00000010 SizeRef=269,248 Selected=0x2323D3E4
+              DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=944,248 Selected=0xBF096F38
+              DockNode  ID=0x00000014 Parent=0x00000010 SizeRef=221,248 Selected=0x2323D3E4
           DockNode      ID=0x00000008 Parent=0x00000002 SizeRef=820,227 Selected=0xC599F4BB
       DockNode          ID=0x0000000A Parent=0x00000012 SizeRef=282,825 Selected=0x26CE0345
-  DockNode              ID=0x00000004 Parent=0xF15DEC6E SizeRef=289,1008 Selected=0xF4B38336
+  DockNode              ID=0x00000004 Parent=0xF15DEC6E SizeRef=425,1008 Selected=0xF4B38336
 
