--- a/imgui.ini
+++ b/imgui.ini
@@ -66152,9 +66152,29 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x3F63757E,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x531ABC17,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x56199E2B,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x3B20AD35,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x206AC10F,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=242,314 Size=1920,1012 Split=X Selected=0xBDDC88E0
+DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=190,262 Size=1920,1012 Split=X Selected=0xBDDC88E0
   DockNode              ID=0x00000003 Parent=0xF15DEC6E SizeRef=1493,1008 Split=X
     DockNode            ID=0x00000011 Parent=0x00000003 SizeRef=343,829 Split=Y Selected=0x09C8B3D2
       DockNode          ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
