Need to build the game now

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1920,1061
+Size=1600,877
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,8 +10,8 @@ Size=751,472
 Collapsed=0
 
 [Window][Scene Hierarchy]
-Pos=0,49
-Size=320,1012
+Pos=0,45
+Size=218,832
 Collapsed=0
 DockId=0x00000001,0
 
@@ -22,13 +22,13 @@ Size=800,576
 Collapsed=0
 
 [Window][Choose File##ChooseFile]
-Pos=393,101
+Pos=458,197
 Size=925,482
 Collapsed=0
 
 [Window][Scene Visualizer]
-Pos=322,49
-Size=1205,706
+Pos=220,45
+Size=1054,526
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -294,8 +294,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=1529,49
-Size=391,1012
+Pos=1276,45
+Size=324,832
 Collapsed=0
 DockId=0x00000004,0
 
@@ -312,8 +312,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1258,757
-Size=269,304
+Pos=1083,573
+Size=191,304
 Collapsed=0
 DockId=0x00000014,0
 
@@ -338,8 +338,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=322,757
-Size=934,304
+Pos=220,573
+Size=861,304
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65315,8 +65315,8 @@ Size=473,247
 Collapsed=0
 
 [Window][Select Script Class]
-Pos=561,225
-Size=272,191
+Pos=449,113
+Size=266,205
 Collapsed=0
 
 [Window][Add New Text to Window2]
@@ -65344,7 +65344,7 @@ Collapsed=0
 
 [Window][##Empty]
 Pos=0,49
-Size=1920,771
+Size=1600,522
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -65370,7 +65370,7 @@ Size=409,172
 Collapsed=0
 
 [Window][Select Asset]
-Pos=875,486
+Pos=611,28
 Size=606,268
 Collapsed=0
 
@@ -65380,14 +65380,15 @@ Size=607,404
 Collapsed=0
 
 [Window][Tilemap Editor]
-Pos=420,194
-Size=287,360
+Pos=421,195
+Size=439,377
 Collapsed=0
 
 [Window][Script Editor]
-Pos=403,157
-Size=1033,401
+Pos=221,573
+Size=860,304
 Collapsed=0
+DockId=0x00000013,1
 
 [Table][0xF9AA59E3,4]
 RefScale=18
@@ -66181,25 +66182,53 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x4BCF09A9,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x50D1AFF8,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x1E1DC2DE,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x920EB778,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x123A694C,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x25716652,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x71EDFE37,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=212,96 Size=1920,1012 Split=X Selected=0xBDDC88E0
-  DockNode              ID=0x00000003 Parent=0xF15DEC6E SizeRef=1527,1008 Split=X
-    DockNode            ID=0x00000011 Parent=0x00000003 SizeRef=343,829 Split=Y Selected=0x09C8B3D2
-      DockNode          ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
-      DockNode          ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
-    DockNode            ID=0x00000012 Parent=0x00000003 SizeRef=1575,829 Split=X
-      DockNode          ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=X
-        DockNode        ID=0x00000001 Parent=0x00000009 SizeRef=320,829 Selected=0x2E9237F7
-        DockNode        ID=0x00000002 Parent=0x00000009 SizeRef=1205,829 Split=Y HiddenTabBar=1
-          DockNode      ID=0x00000007 Parent=0x00000002 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
+DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,68 Size=1600,832 Split=X Selected=0xBDDC88E0
+  DockNode              ID=0x00000001 Parent=0xF15DEC6E SizeRef=218,832 Selected=0x2E9237F7
+  DockNode              ID=0x00000002 Parent=0xF15DEC6E SizeRef=1380,832 Split=X
+    DockNode            ID=0x00000003 Parent=0x00000002 SizeRef=1274,1008 Split=X
+      DockNode          ID=0x00000011 Parent=0x00000003 SizeRef=343,829 Split=Y Selected=0x09C8B3D2
+        DockNode        ID=0x0000000B Parent=0x00000011 SizeRef=309,404 Selected=0x09C8B3D2
+        DockNode        ID=0x0000000C Parent=0x00000011 SizeRef=309,599 Selected=0x6D5396E7
+      DockNode          ID=0x00000012 Parent=0x00000003 SizeRef=1575,829 Split=X
+        DockNode        ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=Y HiddenTabBar=1
+          DockNode      ID=0x00000007 Parent=0x00000009 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
             DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,702 Split=X Selected=0xF6FF0623
               DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=945,575 CentralNode=1 HiddenTabBar=1 Selected=0xBDDC88E0
               DockNode  ID=0x0000000E Parent=0x0000000F SizeRef=308,575 Selected=0xFC56E895
             DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,304 Split=X Selected=0xBF096F38
-              DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=934,248 Selected=0xBF096F38
-              DockNode  ID=0x00000014 Parent=0x00000010 SizeRef=269,248 Selected=0x2323D3E4
-          DockNode      ID=0x00000008 Parent=0x00000002 SizeRef=820,227 Selected=0xC599F4BB
-      DockNode          ID=0x0000000A Parent=0x00000012 SizeRef=282,825 Selected=0x26CE0345
-  DockNode              ID=0x00000004 Parent=0xF15DEC6E SizeRef=391,1008 Selected=0xF4B38336
+              DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=860,248 Selected=0xBF096F38
+              DockNode  ID=0x00000014 Parent=0x00000010 SizeRef=191,248 Selected=0x2323D3E4
+          DockNode      ID=0x00000008 Parent=0x00000009 SizeRef=820,227 Selected=0xC599F4BB
+        DockNode        ID=0x0000000A Parent=0x00000012 SizeRef=282,825 Selected=0x26CE0345
+    DockNode            ID=0x00000004 Parent=0x00000002 SizeRef=324,1008 Selected=0xF4B38336
 
