Moving things around, getting the game up

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1600,877
+Size=1920,1061
 Collapsed=0
 
 [Window][Debug##Default]
@@ -11,7 +11,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,45
-Size=218,832
+Size=218,1016
 Collapsed=0
 DockId=0x00000001,0
 
@@ -28,7 +28,7 @@ Collapsed=0
 
 [Window][Scene Visualizer]
 Pos=220,45
-Size=1054,526
+Size=1374,749
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -294,8 +294,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=1276,45
-Size=324,832
+Pos=1596,45
+Size=324,1016
 Collapsed=0
 DockId=0x00000004,0
 
@@ -312,8 +312,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1083,573
-Size=191,304
+Pos=1345,796
+Size=249,265
 Collapsed=0
 DockId=0x00000014,0
 
@@ -338,8 +338,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=220,573
-Size=861,304
+Pos=220,796
+Size=1123,265
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65315,7 +65315,7 @@ Size=473,247
 Collapsed=0
 
 [Window][Select Script Class]
-Pos=449,113
+Pos=413,221
 Size=266,205
 Collapsed=0
 
@@ -65370,7 +65370,7 @@ Size=409,172
 Collapsed=0
 
 [Window][Select Asset]
-Pos=611,28
+Pos=629,224
 Size=606,268
 Collapsed=0
 
@@ -65380,7 +65380,7 @@ Size=607,404
 Collapsed=0
 
 [Window][Tilemap Editor]
-Pos=421,195
+Pos=756,280
 Size=439,377
 Collapsed=0
 
@@ -66210,9 +66210,13 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x0CF3BE14,4]
+RefScale=16
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,68 Size=1600,832 Split=X Selected=0xBDDC88E0
+DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=60,128 Size=1920,1016 Split=X Selected=0xBDDC88E0
   DockNode              ID=0x00000001 Parent=0xF15DEC6E SizeRef=218,832 Selected=0x2E9237F7
   DockNode              ID=0x00000002 Parent=0xF15DEC6E SizeRef=1380,832 Split=X
     DockNode            ID=0x00000003 Parent=0x00000002 SizeRef=1274,1008 Split=X
@@ -66222,10 +66226,10 @@ DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,68 Size=1600,832 S
       DockNode          ID=0x00000012 Parent=0x00000003 SizeRef=1575,829 Split=X
         DockNode        ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=Y HiddenTabBar=1
           DockNode      ID=0x00000007 Parent=0x00000009 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
-            DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,702 Split=X Selected=0xF6FF0623
+            DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,745 Split=X Selected=0xF6FF0623
               DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=945,575 CentralNode=1 HiddenTabBar=1 Selected=0xBDDC88E0
               DockNode  ID=0x0000000E Parent=0x0000000F SizeRef=308,575 Selected=0xFC56E895
-            DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,304 Split=X Selected=0xBF096F38
+            DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,265 Split=X Selected=0xBF096F38
               DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=860,248 Selected=0xBF096F38
               DockNode  ID=0x00000014 Parent=0x00000010 SizeRef=191,248 Selected=0x2323D3E4
           DockNode      ID=0x00000008 Parent=0x00000009 SizeRef=820,227 Selected=0xC599F4BB
