bug: FileUtils::ReadFile breaks for larger files

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1604,881
+Size=1920,1061
 Collapsed=0
 
 [Window][Debug##Default]
@@ -11,7 +11,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,45
-Size=218,836
+Size=218,1016
 Collapsed=0
 DockId=0x00000001,0
 
@@ -22,13 +22,13 @@ Size=800,576
 Collapsed=0
 
 [Window][Choose File##ChooseFile]
-Pos=458,197
+Pos=468,177
 Size=925,482
 Collapsed=0
 
 [Window][Scene Visualizer]
 Pos=220,45
-Size=1032,569
+Size=1348,749
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -294,8 +294,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=1254,45
-Size=350,836
+Pos=1570,45
+Size=350,1016
 Collapsed=0
 DockId=0x00000004,0
 
@@ -312,8 +312,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1085,616
-Size=167,265
+Pos=1665,796
+Size=255,265
 Collapsed=0
 DockId=0x00000014,0
 
@@ -324,8 +324,8 @@ Collapsed=0
 DockId=0x0000000C,0
 
 [Window][UI Visualizer]
-Pos=345,49
-Size=1265,771
+Pos=345,45
+Size=1265,749
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -338,8 +338,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=220,616
-Size=863,265
+Pos=345,796
+Size=1318,265
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65214,8 +65214,8 @@ Size=389,116
 Collapsed=0
 
 [Window][UI Hierarchy]
-Pos=0,49
-Size=343,1012
+Pos=0,45
+Size=343,1016
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -65225,8 +65225,8 @@ Size=297,128
 Collapsed=0
 
 [Window][UI Element Editor]
-Pos=1612,49
-Size=308,771
+Pos=1612,45
+Size=308,749
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -65343,8 +65343,8 @@ Size=180,92
 Collapsed=0
 
 [Window][##Empty]
-Pos=0,49
-Size=1600,522
+Pos=0,45
+Size=1920,749
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -66214,9 +66214,17 @@ Column 0  Sort=0v
 RefScale=16
 Column 0  Sort=0v
 
+[Table][0xE80C42C3,4]
+RefScale=16
+Column 0  Sort=0v
+
+[Table][0x514BA412,4]
+RefScale=16
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=112,180 Size=1604,836 Split=X Selected=0xBDDC88E0
+DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=268,336 Size=1920,1016 Split=X Selected=0xBDDC88E0
   DockNode              ID=0x00000001 Parent=0xF15DEC6E SizeRef=218,832 Selected=0x2E9237F7
   DockNode              ID=0x00000002 Parent=0xF15DEC6E SizeRef=1380,832 Split=X
     DockNode            ID=0x00000003 Parent=0x00000002 SizeRef=1028,1008 Split=X
