--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1604,881
+Size=1920,1057
 Collapsed=0
 
 [Window][Debug##Default]
@@ -11,7 +11,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,45
-Size=218,836
+Size=218,1012
 Collapsed=0
 DockId=0x00000001,0
 
@@ -28,7 +28,7 @@ Collapsed=0
 
 [Window][Scene Visualizer]
 Pos=220,45
-Size=1061,582
+Size=1377,758
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -294,8 +294,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=1283,45
-Size=321,836
+Pos=1599,45
+Size=321,1012
 Collapsed=0
 DockId=0x00000004,0
 
@@ -312,8 +312,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1085,629
-Size=196,252
+Pos=1343,805
+Size=254,252
 Collapsed=0
 DockId=0x00000014,0
 
@@ -325,7 +325,7 @@ DockId=0x0000000C,0
 
 [Window][UI Visualizer]
 Pos=345,45
-Size=1265,749
+Size=1265,762
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -338,8 +338,8 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=220,629
-Size=863,252
+Pos=220,805
+Size=1121,252
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65226,7 +65226,7 @@ Collapsed=0
 
 [Window][UI Element Editor]
 Pos=1612,45
-Size=308,749
+Size=308,762
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -65343,8 +65343,8 @@ Size=180,92
 Collapsed=0
 
 [Window][##Empty]
-Pos=0,45
-Size=1920,749
+Pos=0,48
+Size=1920,759
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -66222,9 +66222,17 @@ Column 0  Sort=0v
 RefScale=16
 Column 0  Sort=0v
 
+[Table][0x15481576,4]
+RefScale=16
+Column 0  Sort=0v
+
+[Table][0x13FB4432,4]
+RefScale=16
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace               ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=112,180 Size=1604,836 Split=X Selected=0xBDDC88E0
+DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=0,68 Size=1920,1012 Split=X Selected=0xBDDC88E0
   DockNode              ID=0x00000001 Parent=0xF15DEC6E SizeRef=218,832 Selected=0x2E9237F7
   DockNode              ID=0x00000002 Parent=0xF15DEC6E SizeRef=1380,832 Split=X
     DockNode            ID=0x00000003 Parent=0x00000002 SizeRef=1057,1008 Split=X
@@ -66235,7 +66243,7 @@ DockSpace               ID=0xF15DEC6E Window=0x41896AB8 Pos=112,180 Size=1604,83
         DockNode        ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=Y HiddenTabBar=1
           DockNode      ID=0x00000007 Parent=0x00000009 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
             DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,578 Split=X Selected=0xF6FF0623
-              DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=945,575 CentralNode=1 HiddenTabBar=1 Selected=0xBDDC88E0
+              DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=945,575 CentralNode=1 HiddenTabBar=1 Selected=0xF6FF0623
               DockNode  ID=0x0000000E Parent=0x0000000F SizeRef=308,575 Selected=0xFC56E895
             DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,252 Split=X Selected=0xBF096F38
               DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=860,248 Selected=0xBF096F38
