progress: Minor improvements

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceWindow]
 Pos=0,0
-Size=1920,1057
+Size=1920,1061
 Collapsed=0
 
 [Window][Debug##Default]
@@ -11,7 +11,7 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,45
-Size=448,548
+Size=448,550
 Collapsed=0
 DockId=0x00000003,0
 
@@ -22,13 +22,13 @@ Size=800,576
 Collapsed=0
 
 [Window][Choose File##ChooseFile]
-Pos=468,177
+Pos=497,204
 Size=925,482
 Collapsed=0
 
 [Window][Scene Visualizer]
 Pos=450,45
-Size=1470,738
+Size=1470,742
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -294,8 +294,8 @@ Size=401,458
 Collapsed=0
 
 [Window][Component Editor]
-Pos=0,595
-Size=448,462
+Pos=0,597
+Size=448,464
 Collapsed=0
 DockId=0x00000004,0
 
@@ -312,7 +312,7 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Asset Editor]
-Pos=1603,785
+Pos=1603,789
 Size=317,272
 Collapsed=0
 DockId=0x00000014,0
@@ -338,7 +338,7 @@ IsChild=1
 Size=132,76
 
 [Window][Content Browser]
-Pos=450,785
+Pos=450,789
 Size=1151,272
 Collapsed=0
 DockId=0x00000013,0
@@ -65343,8 +65343,8 @@ Size=180,92
 Collapsed=0
 
 [Window][##Empty]
-Pos=0,48
-Size=1920,759
+Pos=0,46
+Size=1920,741
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -66230,9 +66230,13 @@ Column 0  Sort=0v
 RefScale=16
 Column 0  Sort=0v
 
+[Table][0x4842F70C,4]
+RefScale=15
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace             ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace             ID=0xF15DEC6E Window=0x41896AB8 Pos=0,68 Size=1920,1012 Split=X Selected=0xBDDC88E0
+DockSpace             ID=0xF15DEC6E Window=0x41896AB8 Pos=242,310 Size=1920,1016 Split=X Selected=0xBDDC88E0
   DockNode            ID=0x00000001 Parent=0xF15DEC6E SizeRef=448,832 Split=Y Selected=0x2E9237F7
     DockNode          ID=0x00000003 Parent=0x00000001 SizeRef=218,548 Selected=0x2E9237F7
     DockNode          ID=0x00000004 Parent=0x00000001 SizeRef=218,462 Selected=0xF4B38336
