fix: Multiple runs in editor

--- a/imgui.ini
+++ b/imgui.ini
@@ -66236,7 +66236,7 @@ Column 0  Sort=0v
 
 [Docking][Data]
 DockSpace             ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace             ID=0xF15DEC6E Window=0x41896AB8 Pos=242,310 Size=1920,1016 Split=X Selected=0xBDDC88E0
+DockSpace             ID=0xF15DEC6E Window=0x41896AB8 Pos=216,284 Size=1920,1016 Split=X Selected=0xBDDC88E0
   DockNode            ID=0x00000001 Parent=0xF15DEC6E SizeRef=448,832 Split=Y Selected=0x2E9237F7
     DockNode          ID=0x00000003 Parent=0x00000001 SizeRef=218,548 Selected=0x2E9237F7
     DockNode          ID=0x00000004 Parent=0x00000001 SizeRef=218,462 Selected=0xF4B38336
@@ -66248,7 +66248,7 @@ DockSpace             ID=0xF15DEC6E Window=0x41896AB8 Pos=242,310 Size=1920,1016
       DockNode        ID=0x00000009 Parent=0x00000012 SizeRef=1316,825 Split=Y HiddenTabBar=1
         DockNode      ID=0x00000007 Parent=0x00000009 SizeRef=820,562 Split=Y Selected=0xBDDC88E0
           DockNode    ID=0x0000000F Parent=0x00000007 SizeRef=1029,738 Split=X Selected=0xF6FF0623
-            DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=945,575 CentralNode=1 HiddenTabBar=1 Selected=0xF6FF0623
+            DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=945,575 CentralNode=1 HiddenTabBar=1 Selected=0xBDDC88E0
             DockNode  ID=0x0000000E Parent=0x0000000F SizeRef=308,575 Selected=0xFC56E895
           DockNode    ID=0x00000010 Parent=0x00000007 SizeRef=1029,272 Split=X Selected=0xBF096F38
             DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=1151,248 Selected=0xBF096F38
