--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,4 @@
 [Window][DockSpaceWindow]
-Pos=0,0
 Size=1600,877
 Collapsed=0
 
@@ -66248,7 +66247,7 @@ Column 0  Sort=0v
 
 [Docking][Data]
 DockSpace             ID=0xA086D808 Pos=68,199 Size=660,770 CentralNode=1 Selected=0x15EF3519
-DockSpace             ID=0xF15DEC6E Window=0x41896AB8 Pos=0,68 Size=1600,832 Split=X Selected=0xBDDC88E0
+DockSpace             ID=0xF15DEC6E Pos=0,68 Size=1600,832 Split=X Selected=0xBDDC88E0
   DockNode            ID=0x00000001 Parent=0xF15DEC6E SizeRef=448,832 Split=Y Selected=0x2E9237F7
     DockNode          ID=0x00000003 Parent=0x00000001 SizeRef=218,548 Selected=0x2E9237F7
     DockNode          ID=0x00000004 Parent=0x00000001 SizeRef=218,462 Selected=0xF4B38336
